Fixed bug where monster hp was not being updated correctly